(lang dune 3.12)

(name caravan)

(generate_opam_files true)

(source
 (github xemotrix/caravan))

(authors "Chema Rodríguez")

(maintainers "Chema Rodríguez")

(license MIT)

(package
 (name caravan)
 (synopsis "An Entity Component System library for OCaml")
 (description "An Entity Component System library for OCaml")
 (depends ocaml dune))
